# cell_segmentation_tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: annotations.py  images.py  sam.py
backend/app/models/: sam_model.py  schemas.py
backend/app/utils/: annotation_store.py  image_loader.py  point_generator.py
backend/tests/: test_annotations_api.py  test_generate_points_api.py  test_image_loader.py  test_images_api.py  test_main.py  test_point_generator.py  test_sam_api.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: AnnotationList.jsx  ClassSelector.jsx  ImageAdjustments.jsx  ImageCanvas.jsx  ImageList.jsx  KeyboardHelp.jsx  StatusBar.jsx  TransferPanel.jsx  index.js
frontend/src/hooks/: useAnnotations.js  useKeyboard.js  useSAM.js  useTransfer.js
frontend/src/styles/: App.css
frontend/src/utils/: api.js  canvas.js
